--- a/index.html
+++ b/index.html
@@ -391,11 +391,11 @@
 														<div class="wow fadeInUp" data-wow-delay="0.2s">
 															<div class="service-box">
 																<div style="text-align:center">
-																	<img src="img/Twitter.png" alt="" />
+																	<img src="img/weibo.jpg" alt="" />
 																</div>
 																<div class="service-desc">
 																	<br>
-																	<h5>Twitter</h5>
+																	<h5>Weibo</h5>
 																	<a href="#" class="btn btn-skin">Learn more</a>
 																</div>
 															</div>
