member info last name order & favicon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link href="color/default.css" rel="stylesheet" type="text/css" />
 	<link href="css/custom.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="/c3s/img/logo.jpg" />
+	<link rel="icon" type="image/png" href="img/logo.jpg">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 	<div id="container page" class="container page">
@@ -428,25 +429,36 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Xiao Yan</strong></p>
-						</div>
-						<div class="col-md-9">
-							Fifth Year PhD Candidate, Pharmacology, Duke University <br />
-							Visiting Graduate Researcher, Division of Hematology/Oncology, Department of Medicine, UCLA <br />
-							B.S. Peking University <br />
-							Research Interests: Hematopoietic Stem Cell Regeneration and Drug Development
-						</div>
-					</div>
-
-					<div class="member row">
-						<div class="col-md-0"></div>
-						<div class="col-md-3">
 							<p><strong>Shi Gao</strong></p>
 						</div>
 						<div class="col-md-9">
 							Fifth Year PhD Candidate, Computer Science, UCLA <br /> 
 							B.S.  Zhejiang University <br />
 							Research Interests: Semantic Web, Temporal Database, Database Provenance and Data Mining
+						</div>
+					</div>
+
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
+							<p><strong>Jiaqi Gu</strong></p>
+						</div>
+						<div class="col-md-9">
+							Second Year PhD Candidate, Computer Science，UCLA. <br />
+							B.S. Fudan University <br />
+							Research Interest: Big Data Systems
+						</div>
+					</div>
+
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
+							<p><strong>Shanxi Jiang</strong></p>
+						</div>
+						<div class="col-md-9">
+							Second Year PhD, Molecular, Cellular & Integrative Physiology,UCLA <br />
+							B.S.  Fudan University <br />
+							Research Interests: Systems Biology, Cardiology, Chromatin Structure, Epigenetics
 						</div>
 					</div>
 
@@ -477,66 +489,6 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Ying Wang</strong></p>
-						</div>
-						<div class="col-md-9">
-							Fourth Year PhD Candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
-							B.S. Nankai University <br />
-							Research Interests: Skeletal Muscle Wasting and Regeneration, Aging, Immune Regulation of Muscle Physiology
-						</div>
-					</div>
-
-					<div class="member row">
-						<div class="col-md-0"></div>
-						<div class="col-md-3">
-							<p><strong>Huan Yang</strong></p>
-						</div>
-						<div class="col-md-9">
-							Fourth Year  Ph.D candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
-							B.S. Zhejiang University <br />
-							Research Interest: Molecular mechanisms of Parkinson’s Disease
-						</div>
-					</div>
-
-					<div class="member row">
-						<div class="col-md-0"></div>
-						<div class="col-md-3">
-							<p><strong>Jin Zhang</strong></p>
-						</div>
-						<div class="col-md-9">
-							Third Year Ph.D candidate, Molecular and Medical Pharmacology, UCLA <br />
-							M.D. Nantong Medical School <br />
-							Research Interest: Mitochondrial Import of BK Channel in the Heart
-						</div>
-					</div>
-
-					<div class="member row">
-						<div class="col-md-0"></div>
-						<div class="col-md-3">
-							<p><strong>Shanxi Jiang</strong></p>
-						</div>
-						<div class="col-md-9">
-							Second Year PhD, Molecular, Cellular & Integrative Physiology,UCLA <br />
-							B.S.  Fudan University <br />
-							Research Interests: Systems Biology, Cardiology, Chromatin Structure, Epigenetics
-						</div>
-					</div>
-
-					<div class="member row">
-						<div class="col-md-0"></div>
-						<div class="col-md-3">
-							<p><strong>Jiaqi Gu</strong></p>
-						</div>
-						<div class="col-md-9">
-							Second Year PhD Candidate, Computer Science，UCLA. <br />
-							B.S. Fudan University <br />
-							Research Interest: Big Data Systems
-						</div>
-					</div>
-
-					<div class="member row">
-						<div class="col-md-0"></div>
-						<div class="col-md-3">
 							<p><strong>Wanlu Liu</strong></p>
 						</div>
 						<div class="col-md-9">
@@ -549,12 +501,12 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Huixin Zheng</strong></p>
+							<p><strong>Ying Wang</strong></p>
 						</div>
 						<div class="col-md-9">
-							Second Year Master, Luskin School of Public Affairs, UCLA <br />
-							B.S. Sun Yat-sen University <br />
-							Research Interests: Healthcare Policy and International Development
+							Fourth Year PhD Candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
+							B.S. Nankai University <br />
+							Research Interests: Skeletal Muscle Wasting and Regeneration, Aging, Immune Regulation of Muscle Physiology
 						</div>
 					</div>
 
@@ -573,6 +525,31 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
+							<p><strong>Xiao Yan</strong></p>
+						</div>
+						<div class="col-md-9">
+							Fifth Year PhD Candidate, Pharmacology, Duke University <br />
+							Visiting Graduate Researcher, Division of Hematology/Oncology, Department of Medicine, UCLA <br />
+							B.S. Peking University <br />
+							Research Interests: Hematopoietic Stem Cell Regeneration and Drug Development
+						</div>
+					</div>
+
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
+							<p><strong>Huan Yang</strong></p>
+						</div>
+						<div class="col-md-9">
+							Fourth Year  Ph.D candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
+							B.S. Zhejiang University <br />
+							Research Interest: Molecular mechanisms of Parkinson’s Disease
+						</div>
+					</div>
+
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
 							<p><strong>Ziqi Zang</strong></p>
 						</div>
 						<div class="col-md-9">
@@ -580,6 +557,31 @@
 							B.S University of Minnesota,Twin Cities
 						</div>
 					</div>
+
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
+							<p><strong>Jin Zhang</strong></p>
+						</div>
+						<div class="col-md-9">
+							Third Year Ph.D candidate, Molecular and Medical Pharmacology, UCLA <br />
+							M.D. Nantong Medical School <br />
+							Research Interest: Mitochondrial Import of BK Channel in the Heart
+						</div>
+					</div>
+
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
+							<p><strong>Huixin Zheng</strong></p>
+						</div>
+						<div class="col-md-9">
+							Second Year Master, Luskin School of Public Affairs, UCLA <br />
+							B.S. Sun Yat-sen University <br />
+							Research Interests: Healthcare Policy and International Development
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</section>
