add member photo profiles

--- a/index.html
+++ b/index.html
@@ -417,45 +417,46 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Zhiping Feng</strong></p>
+							<img src="members/fengzhiping.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Zhiping Feng</strong></p>
 							Fifth Year PhD Candidate, Molecular, Cellular & Integrative Physiology，UCLA <br />
 							B.S. Nankai University <br />
 							Research Interest: Biophysics, Optogenetics, Systems Biology
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Shi Gao</strong></p>
+							<img src="members/gaoshi.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Shi Gao</strong></p>
 							Fifth Year PhD Candidate, Computer Science, UCLA <br /> 
 							B.S.  Zhejiang University <br />
 							Research Interests: Semantic Web, Temporal Database, Database Provenance and Data Mining
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Jiaqi Gu</strong></p>
+							<img src="members/jiaqi.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Jiaqi Gu</strong></p>
 							Second Year PhD Candidate, Computer Science，UCLA. <br />
 							B.S. Fudan University <br />
 							Research Interest: Big Data Systems
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Shanxi Jiang</strong></p>
+							<img src="members/jiangshanxi.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Shanxi Jiang</strong></p>
 							Second Year PhD, Molecular, Cellular & Integrative Physiology,UCLA <br />
 							B.S.  Fudan University <br />
 							Research Interests: Systems Biology, Cardiology, Chromatin Structure, Epigenetics
@@ -465,21 +466,22 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Rui Li</strong></p>
+							<img src="members/lirui2.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
-						<div class="col-md-9">	
+						<div class="col-md-9">
+							<p><strong>Rui Li</strong></p>	
 							Fifth year Ph.D. Molecular and Medical Pharmacology, UCLA <br /> 
 							Bachelor of Medicine, Zhejiang University <br /> 
 							Research Interests: Inflammation and Carcinogenesis 
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Ting Liu</strong></p>
+							<img src="members/liuting.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Ting Liu</strong></p>
 							Fifth Year PhD Candidate, Molecular, Cellular & Developmental Biology, UCLA <br />
 							B.S.  Sichuan University <br />
 							Research Interests: Immune Response to Injury, Stem Cell Biology
@@ -489,9 +491,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Wanlu Liu</strong></p>
+							<img src="members/liuwanlu.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Wanlu Liu</strong></p>
 							Second year PhD Candidate, Molecular Biology IDP, UCLA <br />                                   
 							B.S. Zhejiang University <br />              
 							Research interests: Genomics, Bioinformatics, Epigenetics, Statistics
@@ -501,9 +504,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Ying Wang</strong></p>
+							<img src="members/wangying.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Ying Wang</strong></p>
 							Fourth Year PhD Candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
 							B.S. Nankai University <br />
 							Research Interests: Skeletal Muscle Wasting and Regeneration, Aging, Immune Regulation of Muscle Physiology
@@ -513,9 +517,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Yan Xu</strong></p>
+							<img src="members/xuyan.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Yan Xu</strong></p>
 							Master of Landscape Architecture <br />
 							B.S. Sun-yat-sen University <br />
 							Research Interest: Landscape design, graphic design
@@ -525,9 +530,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Xiao Yan</strong></p>
+							<img src="members/yanxiao.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Xiao Yan</strong></p>
 							Fifth Year PhD Candidate, Pharmacology, Duke University <br />
 							Visiting Graduate Researcher, Division of Hematology/Oncology, Department of Medicine, UCLA <br />
 							B.S. Peking University <br />
@@ -538,9 +544,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Huan Yang</strong></p>
+							<img src="members/yanghuan.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Huan Yang</strong></p>
 							Fourth Year  Ph.D candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
 							B.S. Zhejiang University <br />
 							Research Interest: Molecular mechanisms of Parkinson’s Disease
@@ -550,9 +557,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Ziqi Zang</strong></p>
+							<img src="members/zhangziqi.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Ziqi Zang</strong></p>
 							First Year PhD, Economics, UCLA <br />
 							B.S University of Minnesota,Twin Cities
 						</div>
@@ -561,9 +569,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Jin Zhang</strong></p>
+							<img src="members/zhangjin.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Jin Zhang</strong></p>
 							Third Year Ph.D candidate, Molecular and Medical Pharmacology, UCLA <br />
 							M.D. Nantong Medical School <br />
 							Research Interest: Mitochondrial Import of BK Channel in the Heart
@@ -573,9 +582,10 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
-							<p><strong>Huixin Zheng</strong></p>
+							<img src="members/zhenghuixin.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
+							<p><strong>Huixin Zheng</strong></p>
 							Second Year Master, Luskin School of Public Affairs, UCLA <br />
 							B.S. Sun Yat-sen University <br />
 							Research Interests: Healthcare Policy and International Development
