update advisor info

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 						<div>UCLA Human Genetics Department</div>
 						<div>Member, Bioinformatics GPB Home Area, Brain Research Institute</div>
 						<div>Eli & Edythe Broad Center of Regenerative Medicine & Stem Cell Research</div>
-						<div>Director, VLSI Architecture, Synthesis, and Technology (VAST) Laboratory</div>
+						<div></div>
 					</div>
 					<div class="col-md-4">
 						<p><strong>Research interest</strong></p>
@@ -244,10 +244,11 @@
 						<p><strong>Ben Rich-Lockheed Martin Chair Professor</strong></p>
 						<div>Henry Samueli School of Engineering</div>
 						<div>Department of Mechanical & Aerospace Engineering</div>
+						<div>Department of Bioengineering</div> 
 					</div>
 					<div class="col-md-4">
 						<p><strong>Research interest</strong></p>
-						<p>Dr. Ho is interested in Combinatorial drug therapeutics, Bio-molecular diagnostics, Feedback System Control (FSC) technique, Micro/Nano-electro-Mechanical-Systems, Microfluidics, Turbulence.</p>
+						<p>Dr. Ho is interested in personalized medicine, combinatorial drug therapeutics, bio-molecular diagnostics, feedback system control (FSC) technique,  micro-fluidics.</p>
 					</div>
 				</div>
 				<div class="advisor row">
@@ -272,10 +273,8 @@
 					</div>
 					<div class="col-md-6">
 						<div><strong>Wenyuan Shi</strong></div>
-						<p><strong>Professor</strong></p>
-						<div>Director, Bio-Rad Core for Advanced Molecular Research</div>
-						<div>Microbiology, Immunology & Molecular Genetics</div>
-						<div>Advisor, Oral Biology PhD Program</div>
+						<p><strong>Professor and Chair of Oral Biology, UCLA School of Dentistry</strong></p>
+						<div>Professor of Microbiology, Immunology and Molecular Genetics, UCLA School of Medicine</div>
 					</div>
 					<div class="col-md-4">
 						<p><strong>Research interest</strong></p>
