--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<link href="css/custom.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="/c3s/img/logo.jpg" />
 	<link rel="icon" type="image/png" href="img/logo.jpg">
+
+	<script src="js/jquery.min.js"></script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 	<div id="container page" class="container page">
@@ -41,8 +43,9 @@
 								<ul class="nav navbar-nav navbar-right">
 									<li class="active"><a href="#intro">Home</a></li>
 									<li><a href="#about">About Us</a></li>
+									<li><a href="#events">Events</a></li>
 									<li><a href="#advisors">Advisors</a></li>
-									<li><a href="#photos">Photo Gallery</a></li>
+									<li><a href="#photos">Gallery</a></li>
 									<li><a href="#members">Members</a></li>
 									<!--li><a href="#schedule">Schedule</a></li-->
 									<!--li><a href="#contact">Contact</a></li-->
@@ -169,6 +172,45 @@
 			</div>
 		</section>
 		<!-- /Section: about -->
+
+		<!-- Section: events -->
+		<section id="events" class="home-section color-dark bg-white">
+			<div class="container marginbot-30">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
+							<div class="section-heading text-center">
+								<h2 class="h-bold">Events</h2>
+								<div class="divider-header"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="container marginbot-70">
+				<div class="row text-center">
+					<!--div class="col-md-2">
+						<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
+					</div-->
+					<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
+					<div class="col-md-12">
+						<p>An upcoming events will be introduced soon!</p>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row text-center">
+					<!--div class="col-md-2">
+						<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
+					</div-->
+					<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Past events</strong></p>
+					<div class="col-md-12">
+						<p>CBPS Seminar</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /Section: events -->
 
 		<!-- Section: advisors -->
 		<section id="advisors" class="home-section color-dark bg-white">
@@ -340,9 +382,9 @@
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
 							<div class="section-heading text-center">
-								<h2 class="h-bold">Photo Gallery</h2>
+								<h2 class="h-bold">Gallery</h2>
 								<div class="divider-header"></div>
-								<p>TBD: photo from past events</p>
+								<p>Photos from past events</p>
 							</div>
 						</div>
 					</div>
@@ -353,19 +395,26 @@
 					<div class="col-sm-12 col-md-12 col-lg-12" >
 						<div class="wow bounceInUp" data-wow-delay="0.4s">
 							<div id="owl-works" class="owl-carousel">
-								<div class="item"><a href="img/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg"><img src="img/works/1.jpg" class="img-responsive" alt="img"></a></div>
-								<div class="item"><a href="img/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/2@2x.jpg"><img src="img/works/2.jpg" class="img-responsive " alt="img"></a></div>
-								<div class="item"><a href="img/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/3@2x.jpg"><img src="img/works/3.jpg" class="img-responsive " alt="img"></a></div>
-								<div class="item"><a href="img/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/4@2x.jpg"><img src="img/works/4.jpg" class="img-responsive " alt="img"></a></div>
-								<div class="item"><a href="img/works/5.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/5@2x.jpg"><img src="img/works/5.jpg" class="img-responsive " alt="img"></a></div>
-								<div class="item"><a href="img/works/6.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/6@2x.jpg"><img src="img/works/6.jpg" class="img-responsive " alt="img"></a></div>
-								<div class="item"><a href="img/works/7.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/7@2x.jpg"><img src="img/works/7.jpg" class="img-responsive " alt="img"></a></div>
-								<div class="item"><a href="img/works/8.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/8@2x.jpg"><img src="img/works/8.jpg" class="img-responsive " alt="img"></a></div>
+								<div class="item photo-anchor">
+									<a href="img/works/4.jpg" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/4@2x.jpg">
+										<img src="img/works/4.jpg" class="img-responsive " alt="img">
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<script type="text/javascript">
+				//$(document).ready(function(){
+				// javascript placed here to mimic html insertion
+				var photo_lst = ['0.jpg', '1.jpg', '2.jpg', '3.jpg'];
+				for (var i=0; i<photo_lst.length; i++) {
+					$('<div class="item"><a href="img/works/' + photo_lst[i] + '" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi=""><img src="img/works/' + photo_lst[i] + '" class="img-responsive " alt="img"></a></div>').insertAfter(".photo-anchor");
+				}
+				$(".photo-anchor").remove();
+				//});
+			</script>
 		</section>
 		<!-- /Section: works -->
 
@@ -738,7 +787,6 @@
 		<!-- /footer -->
 
 		<!-- Core JavaScript Files -->
-		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.sticky.js"></script>
 		<script src="js/jquery.flexslider-min.js"></script>
