--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<li><a href="#events">Events</a></li>
 									<li><a href="#advisors">Advisors</a></li>
 									<li><a href="#photos">Gallery</a></li>
-									<li><a href="#members">Members</a></li>
+									<li><a href="#members">Orgnizers</a></li>
 									<!--li><a href="#schedule">Schedule</a></li-->
 									<!--li><a href="#contact">Contact</a></li-->
 									<li><a href="#service">Join Us</a></li>
@@ -78,7 +78,9 @@
 						<!-- Static Header -->
 						<div class="header-text hidden-xs">
 							<div class="col-md-12 text-center">
-								<h2><span>Welcome to UCLA C3S!</span></h2><br/>
+								<div class="container margintop-50">
+									<h2><span><b>Welcome to UCLA C3S!</b></span></h2><br/>
+								</div>
 								<h3><span>Chinese-American Students and Scholars Seminar</span></h3><br/>
 								<div class="">
 									<a class="btn btn-theme btn-sm btn-min-block" href="#about">About us</a>
@@ -92,10 +94,9 @@
 						<!-- Static Header -->
 						<div class="header-text hidden-xs">
 							<div class="col-md-12 text-center">
-								<h2>
-									<span>See what is happening</span>
-								</h2>
-								<br>
+								<div class="container margintop-50">
+									<h2><span><b>See what is happening</b></span></h2><br/>
+								</div>
 								<h3>
 									<span>Check out our online schedule and photo gallery </span>
 								</h3>
@@ -111,10 +112,9 @@
 						<!-- Static Header -->
 						<div class="header-text hidden-xs">
 							<div class="col-md-12 text-center">
-								<h2>
-									<span>Join Us</span>
-								</h2>
-								<br>
+								<div class="container margintop-50">
+									<h2><span><b>Join Us</b></span></h2><br/>
+								</div>
 								<h3>
 									<span>Get Automatic Reminder</span>
 								</h3>
@@ -316,7 +316,8 @@
 					<div class="col-md-6">
 						<div><strong>Wenyuan Shi</strong></div>
 						<p><strong>Professor and Chair of Oral Biology, UCLA School of Dentistry</strong></p>
-						<div>Professor of Microbiology, Immunology and Molecular Genetics, UCLA School of Medicine</div>
+						<div>Professor of Microbiology, Immunology and Molecular Genetics</div>
+						<div>UCLA School of Medicine</div>
 					</div>
 					<div class="col-md-4">
 						<p><strong>Research interest</strong></p>
@@ -371,6 +372,23 @@
 						<p>The main focus of Dr. Wang&rsquo;s research is stress induced signaling mechanism in human diseases.</p>
 					</div>
 				</div>
+				<div class="advisor row">
+					<div class="col-md-2">
+						<img src="advisors/Guo.jpg" alt="" class="img-responsive" height="210" width="150" />
+					</div>
+					<div class="col-md-6">
+						<div><strong>Feng Guo</strong></div>
+						<p><strong>Associate Professor in Biological Chemistry</strong></p>
+						<div>Director of the Biochemistry</div>
+						<div>Biophysics & Structural Biology Home Area</div>
+						<div>David Geffen School of Medicine</div>
+						<div>Member of the Jonsson Comprehensive Cancer Center</div>
+					</div>
+					<div class="col-md-4">
+						<p><strong>Research interest</strong></p>
+						<p>Dr. Guo is interested to understand the structure and function of non-protein-coding RNAs. In particular, his group is studying how microRNAs are produced and how this process is regulated.</p>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- /Section: advisors -->
@@ -396,8 +414,8 @@
 						<div class="wow bounceInUp" data-wow-delay="0.4s">
 							<div id="owl-works" class="owl-carousel">
 								<div class="item photo-anchor">
-									<a href="img/works/4.jpg" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/4@2x.jpg">
-										<img src="img/works/4.jpg" class="img-responsive " alt="img">
+									<a href="img/works/sample.jpg" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/sample@2x.jpg">
+										<img src="img/works/sample.jpg" class="img-responsive " alt="img">
 									</a>
 								</div>
 							</div>
@@ -408,9 +426,9 @@
 			<script type="text/javascript">
 				//$(document).ready(function(){
 				// javascript placed here to mimic html insertion
-				var photo_lst = ['0.jpg', '1.jpg', '2.jpg', '3.jpg'];
+				var photo_lst = ['0.jpg', '1.jpg', '2.jpg', '3.jpg', '4.jpg', '5.jpg', '6.jpg', '7.jpg', '8.jpg', '9.jpg', '10.jpg'];
 				for (var i=0; i<photo_lst.length; i++) {
-					$('<div class="item"><a href="img/works/' + photo_lst[i] + '" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi=""><img src="img/works/' + photo_lst[i] + '" class="img-responsive " alt="img"></a></div>').insertAfter(".photo-anchor");
+					$('<div class="item"><a href="img/works/' + photo_lst[i] + '" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi=""><img src="img/works/' + photo_lst[i] + '" class="img-responsive " alt="img"></a></div>').insertBefore(".photo-anchor");
 				}
 				$(".photo-anchor").remove();
 				//});
@@ -453,7 +471,7 @@
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
 							<div class="section-heading text-center">
-								<h2 class="h-bold">Members</h2>
+								<h2 class="h-bold">Orgnizing Committee</h2>
 								<div class="divider-header"></div>
 							</div>
 						</div>
