--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 									<li class="active"><a href="#intro">Home</a></li>
 									<li><a href="#about">About Us</a></li>
 									<li><a href="#events">Events</a></li>
+									<li><a href="https://www.eventbrite.com/e/ucla-c3s-grand-opening-seminar-tickets-16372242819">RSVP!</a></li>
 									<li><a href="#advisors">Advisors</a></li>
 									<li><a href="#photos">Gallery</a></li>
 									<li><a href="#members">Orgnizers</a></li>
@@ -192,9 +193,13 @@
 					<!--div class="col-md-2">
 						<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
 					</div-->
-					<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
+					<p>
+						<strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events --
+							<a href="https://www.eventbrite.com/e/ucla-c3s-grand-opening-seminar-tickets-16372242819">Click to RSVP</a>
+						</strong>
+					</p>
 					<div class="col-md-12">
-						<p>An upcoming events will be introduced soon!</p>
+						<img src="events/4_10.jpg" alt="upcoming" width="100%"/>
 					</div>
 				</div>
 			</div>
