--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 				// javascript placed here to mimic html insertion
 				var photo_lst = ['4.jpg', '5.jpg', '6.jpg', '7.jpg', '8.jpg', '9.jpg', '10.jpg'];
 				for (var i=0; i<photo_lst.length; i++) {
-					$('<div class="item"><a href="img/works/' + photo_lst[i] + '" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi=""><img src="img/event1/' + photo_lst[i] + '" class="img-responsive " alt="img"></a></div>').insertBefore(".photo-anchor");
+					$('<div class="item"><a href="img/event1/' + photo_lst[i] + '" title="" data-lightbox-gallery="gallery1" data-lightbox-hidpi=""><img src="img/event1/' + photo_lst[i] + '" class="img-responsive " alt="img"></a></div>').insertBefore(".photo-anchor");
 				}
 				$(".photo-anchor").remove();
 				//});
