compress imgs & add 4_21 event poster

--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
 						<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
 					</div-->
 					<p>
-						<strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events (check back later!)
+						<strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events (Tuesday, April 21)
 							<!--a href="https://www.eventbrite.com/e/ucla-c3s-grand-opening-seminar-tickets-16372242819">Click to RSVP</a-->
 						</strong>
 					</p>
-					<!--div class="col-md-12">
-						<img src="events/4_10.jpg" alt="upcoming" width="100%"/>
+					<div class="col-md-12">
+						<img src="events/4_21.jpg" alt="upcoming" width="100%"/>
 					</div-->
 				</div>
 			</div>
@@ -217,6 +217,7 @@
 					<!--div class="col-md-2">
 						<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
 					</div-->
+					<p></p>
 					<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Past events</strong></p>
 					<div class="col-md-12">
 						<a href="events/4_10.jpg">Can we design our career? (Speaker: Jason Cong)</a>
