--- a/index.html
+++ b/index.html
@@ -200,27 +200,27 @@
 			<div class="container marginbot-70">
 				<div class="row text-center">
 					<!--div class="col-md-2">
-						<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
+						<p><strong>Upcoming events</strong></p>
 					</div-->
 					<p>
-						<strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events (Tuesday, April 21)
+						<strong>Upcoming events (Thursday, May 14)
 							<!--a href="https://www.eventbrite.com/e/ucla-c3s-grand-opening-seminar-tickets-16372242819">Click to RSVP</a-->
 						</strong>
 					</p>
 					<div class="col-md-12">
-						<img src="events/4_21.jpg" alt="upcoming" width="100%"/>
-					</div-->
+						<img src="events/5_14.jpg" alt="upcoming" width="100%"/>
+					</div>
 				</div>
 			</div>
 			<div class="container">
 				<div class="row text-center">
-					<!--div class="col-md-2">
-						<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Upcoming events</strong></p>
-					</div-->
 					<p></p>
-					<p><strong id="docs-internal-guid-7540891d-fac0-2c6f-1586-6b47b55ce7f4">Past events</strong></p>
+					<p><strong>Past events</strong></p>
 					<div class="col-md-12">
-						<a href="events/4_10.jpg">Can we design our career? (Speaker: Jason Cong)</a>
+						<a href="events/4_21.jpg">How to Present Your Research? (Speaker: Feng Guo, Dezhi Kang)</a>
+					</div>
+					<div class="col-md-12">
+						<a href="events/4_10.jpg">Can we Design Our Career? (Speaker: Jason Cong)</a>
 					</div>
 				</div>
 			</div>
